Refactor HTML structure and update content

--- a/index.html
+++ b/index.html
@@ -66,15 +66,85 @@
     const today = new Date();
 
     const birthdayItem = {
-      img: "verjaardag.jpeg",
+      img: "ski_kusje.jpeg",
       text: "Je gaat deze website sowieso niet openen op je verjaardag, maar als dat wel zo is, weet dan hoeveel ik van je hou."
     };
 
     // 🖤 Normale herinneringen
     const items = [
-      { img: "zielige_mikki.jpeg", text: "Soms ben je een beetje zielig" },
-      { img: "ski_kusje.HEIC", text: "Wat was de lucht toen mooi he" }
-    ];
+  { img: "ski_kusje.jpeg", text: "Mogen we niet even terug naar Italië" },
+  { img: "zielige_mikki.jpeg", text: "Soms ben je ook een beetje zielig" },
+  { img: "0DC615C9-47BA-4E60-B891-0930CD9B3C2A.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "72BFD564-AF81-45C7-BF4D-7382B3C95C38.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "2907ACEA-3281-419F-9740-90993014B7EA.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "AC90B10F-214D-4573-BD62-7BA425A2B771.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "C06194D1-5DF7-4EC6-A060-8A9302920D69.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "d54184f7-6988-4b68-989e-7936df1e8148.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "D749614E-EA37-4C49-8C3D-357BA059CA22.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "e4bdaf6b-b5f0-479f-8dc3-9e8d06c4e6cd.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "EF3993F9-C9F0-4054-A1E6-A8CA779A4809.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+
+  { img: "IMG_1349.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_1360.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_1484.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_1490.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_1504.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_1511.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_1560.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_1695.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_1702.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_1743.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_1746.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_1751.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_1766.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_1782.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_1807.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_1831.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_1839.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_1853.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_1888.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_1910.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_1924.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_1929.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_1970.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_1978.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_2005.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_2012.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_2083.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_2102.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_2109.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_2128.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_2149.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_2211.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_2217.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_2280.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_2300.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_2305.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_2370.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_2402.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_2407.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_2415.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_2418.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_2424.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_2426.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_2464.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_2471.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_2483.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_2502.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_2507.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_2574.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_2609.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_2617.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_2626.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_2656.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_5566.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_5568.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_5573.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_5843.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_6651.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_6671.jpeg", text: "Ik hou duizend miljoen miljard van jou." }
+];
+
 
     // 🎁 Kies juiste item
     let chosen;
@@ -108,5 +178,6 @@
   </script>
 </body>
 </html>
+
 
 
