--- a/index.html
+++ b/index.html
@@ -74,42 +74,42 @@
     const items = [
   { img: "ski_kusje.jpeg", text: "Mogen we niet even terug naar Italië" },
   { img: "zielige_mikki.jpeg", text: "Soms ben je ook een beetje zielig" },
-  { img: "0DC615C9-47BA-4E60-B891-0930CD9B3C2A.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "72BFD564-AF81-45C7-BF4D-7382B3C95C38.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "2907ACEA-3281-419F-9740-90993014B7EA.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "AC90B10F-214D-4573-BD62-7BA425A2B771.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "C06194D1-5DF7-4EC6-A060-8A9302920D69.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "d54184f7-6988-4b68-989e-7936df1e8148.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "D749614E-EA37-4C49-8C3D-357BA059CA22.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "e4bdaf6b-b5f0-479f-8dc3-9e8d06c4e6cd.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "EF3993F9-C9F0-4054-A1E6-A8CA779A4809.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "0DC615C9-47BA-4E60-B891-0930CD9B3C2A.jpeg", text: "Foto van dat weekend Berlijn waar het allemaal een beetje begon... :) " },
+  { img: "72BFD564-AF81-45C7-BF4D-7382B3C95C38.jpeg", text: "Ich möchte bitte gerne nog ein Weizen" },
+  { img: "2907ACEA-3281-419F-9740-90993014B7EA.jpeg", text: "Ditte vette raveparty op de A10, dat was echt een once in a lifetime #ikwilweerzobruinzijn" },
+  { img: "AC90B10F-214D-4573-BD62-7BA425A2B771.jpeg", text: "Klein kusje, groot bord Tiroler Gröstl" },
+  { img: "C06194D1-5DF7-4EC6-A060-8A9302920D69.jpeg", text: "Biertje van de Späti en ready to party hardy" },
+  { img: "d54184f7-6988-4b68-989e-7936df1e8148.jpeg", text: "Wachten op de tram met jou voelt niet als wachten" },
+  { img: "D749614E-EA37-4C49-8C3D-357BA059CA22.jpeg", text: "De zomer is heel leuk, maar dit is toch ook echt ongelofeloos" },
+  { img: "e4bdaf6b-b5f0-479f-8dc3-9e8d06c4e6cd.jpeg", text: "Ik vind de getekende demonenversie van deze toch echt beter" },
+  { img: "EF3993F9-C9F0-4054-A1E6-A8CA779A4809.jpeg", text: "Doe de Michel" },
 
-  { img: "IMG_1349.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_1360.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_1484.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_1490.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_1504.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_1511.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_1560.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_1695.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_1702.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_1743.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_1746.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_1751.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_1766.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_1782.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_1807.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_1831.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_1839.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_1853.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_1888.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_1910.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_1924.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_1929.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_1970.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_1978.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_2005.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_2012.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_1349.jpeg", text: "Het moment dat het weer iets van lekker weer is gaan we de hele middag in Vondelpark liggen met sinaasappels" },
+  { img: "IMG_1360.jpeg", text: "Geen uitleg nodig" },
+  { img: "IMG_1484.jpeg", text: "Belgische politie: 'NU DIE FIETS AF, LEVENSGEVAARLIJK!'" },
+  { img: "IMG_1490.jpeg", text: "Belgische politie: 'NU DIE FIETS AF, LEVENSGEVAARLIJK!" },
+  { img: "IMG_1504.jpeg", text: "Lara: '" },
+  { img: "IMG_1511.jpeg", text: "Cutiepetoeties, van de zomer weer veel feestjes met Lara pakken!" },
+  { img: "IMG_1560.jpeg", text: "Blauw, rood, bruin, blond, het bier was lauw en de avond bond" },
+  { img: "IMG_1695.jpeg", text: "Wat is nog leuker dan een avond Skatecafe? Een avond skatecafe met Elin natuurlijk :)" },
+  { img: "IMG_1702.jpeg", text: "Fietsen met jou voorop is zwaarder, maar makkelijker, snap je?" },
+  { img: "IMG_1743.jpeg", text: "Tobi's appartement + jij in mijn armen + sigaretje = perfectie" },
+  { img: "IMG_1746.jpeg", text: "Ff, hier zie je toch de allergrootste gangster (van de bovenste verdieping van Sint-Annastraat 13)?" },
+  { img: "IMG_1751.jpeg", text: "En de prijs voor de allerschattigste foto ooit gaat naar...." },
+  { img: "IMG_1766.jpeg", text: "Hapjes zijn het lekkerst op het strand" },
+  { img: "IMG_1782.jpeg", text: "Als je moest kiezen, nooit poffertjes of nooit meer een vinger in mijn mond als ik gaap, wat kies je dan?" },
+  { img: "IMG_1807.jpeg", text: "We gaan gaypride dit jaar echt ff extravagant doen, wat is dat geweldig (ik draag dit jaar ook het bijbehorende broekje ;)" },
+  { img: "IMG_1831.jpeg", text: "Hapjes zijn het lekkerst op het strand" },
+  { img: "IMG_1839.jpeg", text: "Dat ziet er lekker, daar wil ik mijn mond wel even overheen zetten. En mooie koffie ook" },
+  { img: "IMG_1853.jpeg", text: "Hier scheeuw ik: 'JE ZIET ER ZO GOED UIT MET DIE BANDANAAAAA!'" },
+  { img: "IMG_1888.jpeg", text: "#karbonkelkusje" },
+  { img: "IMG_1910.jpeg", text: "Zeldzame foto van een Amsterdams meisje in Leuven, die echt lacht als een superster, WAUW" },
+  { img: "IMG_1924.jpeg", text: "'He ChatGPT, maak een foto van een verdwaalde hippie in Leuven met een ijsje'" },
+  { img: "IMG_1929.jpeg", text: "Oh gewoon een foto van klein lepe.... WACHT ER ZIT EEN JONGETJE IN!!!" },
+  { img: "IMG_1970.jpeg", text: "Health level: 100, Swag level: 10000000000 ⌐■_■" },
+  { img: "IMG_1978.jpeg", text: "Kan jij heel gauw weer je baywatch badpak aandoen?" },
+  { img: "IMG_2005.jpeg", text: "Mevrouw, kijk uit, uw tong valt uit u mond :P. Bonusvraag, welke stad is dit? App het naar mij en ontvang 5 kusjes als prijs." },
+  { img: "IMG_2012.jpeg", text: "Coole jas, en NOG een cooler meisje ;)" },
   { img: "IMG_2083.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
   { img: "IMG_2102.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
   { img: "IMG_2109.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
@@ -178,6 +178,7 @@
   </script>
 </body>
 </html>
+
 
 
 
