Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -110,19 +110,19 @@
   { img: "IMG_1978.jpeg", text: "Kan jij heel gauw weer je baywatch badpak aandoen?" },
   { img: "IMG_2005.jpeg", text: "Mevrouw, kijk uit, uw tong valt uit u mond :P. Bonusvraag, welke stad is dit? App het naar mij en ontvang 5 kusjes als prijs." },
   { img: "IMG_2012.jpeg", text: "Coole jas, en NOG een cooler meisje ;)" },
-  { img: "IMG_2083.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_2102.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_2109.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_2128.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_2149.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_2211.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_2217.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_2280.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_2300.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_2305.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_2370.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_2402.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_2407.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
+  { img: "IMG_2083.jpeg", text: "Alle vrienden van je ouders leren kennen en super leuke film kijken, en dat allemaal ook nog eens met jou #topavond" },
+  { img: "IMG_2102.jpeg", text: "Het gaat dus rond dat ene schelpje dat je toen niet mee had genomen nu de bekenste schelpenvolkszanger van de Noordzee is" },
+  { img: "IMG_2109.jpeg", text: "Rode wijn, een warme heater en koud biertje en felle discussies over tijd, daarom hou ik zoveel van je" },
+  { img: "IMG_2128.jpeg", text: "Live opname van het aller leukste beste liefste origneelste coolste en cutestje kado ooit (en tevens de geboorte van Joris)" },
+  { img: "IMG_2149.jpeg", text: "Een beetje regen stopt die coole chicks niet om ADE helemaal op zijn kop te zetten ⌐■_■" },
+  { img: "IMG_2211.jpeg", text: "'Doe even alsof ik net iets heel grappigs zei'" },
+  { img: "IMG_2217.jpeg", text: "OMA ALERT: Je moet nu je oma appen en vragen hoe der dag was en Boris appen dat hij hetzelfde moet doen" },
+  { img: "IMG_2280.jpeg", text: "Hapjes zijn het een na lekkerst in de tram" },
+  { img: "IMG_2300.jpeg", text: "Even een herrinering dat jij gewoon de koloniale geschiedenis van je eigen buurt hebt onderzocht en gedeeld met allemaal vrienden buurtbewoners, zo trots!" },
+  { img: "IMG_2305.jpeg", text: "Petitie om het aandeel vrouwen in straatnaambordjes omhoog te halen door de Sloterkade te veranderen naar Vrouwmetpowermikkiflowerstraat, wie stemt voor?" },
+  { img: "IMG_2370.jpeg", text: "Prijsvraagfoto! App nu wat er op het gebouw achter mij staat wat ik altijd zeg als we er langs rijden en win 5 kusjes!" },
+  { img: "IMG_2402.jpeg", text: "Of nooit meer sinaasappels of nooit meer eitjes door mij voor ontbijt, wat zou je dan kiezen? " },
+  { img: "IMG_2407.jpeg", text: "'He sir, could you please take a cute picture of us under the star'" },
   { img: "IMG_2415.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
   { img: "IMG_2418.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
   { img: "IMG_2424.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
@@ -178,6 +178,7 @@
   </script>
 </body>
 </html>
+
 
 
 
