Fix HTML character encoding issues

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
   { img: "72BFD564-AF81-45C7-BF4D-7382B3C95C38.jpeg", text: "Ich möchte bitte gerne nog ein Weizen" },
   { img: "2907ACEA-3281-419F-9740-90993014B7EA.jpeg", text: "Ditte vette raveparty op de A10, dat was echt een once in a lifetime #ikwilweerzobruinzijn" },
   { img: "AC90B10F-214D-4573-BD62-7BA425A2B771.jpeg", text: "Klein kusje, groot bord Tiroler Gröstl" },
-  { img: "C06194D1-5DF7-4EC6-A060-8A9302920D69.jpeg", text: "Biertje van de Späti en ready to party hardy" },
+  { img: "C06194D1-5DF7-4EC6-A060-8A9302920D69.jpeg", text: "Biertje van de Späti en ready to party hardy #ikmiseensnor" },
   { img: "d54184f7-6988-4b68-989e-7936df1e8148.jpeg", text: "Wachten op de tram met jou voelt niet als wachten" },
   { img: "D749614E-EA37-4C49-8C3D-357BA059CA22.jpeg", text: "De zomer is heel leuk, maar dit is toch ook echt ongelofeloos" },
   { img: "e4bdaf6b-b5f0-479f-8dc3-9e8d06c4e6cd.jpeg", text: "Ik vind de getekende demonenversie van deze toch echt beter" },
@@ -123,26 +123,26 @@
   { img: "IMG_2370.jpeg", text: "Prijsvraagfoto! App nu wat er op het gebouw achter mij staat wat ik altijd zeg als we er langs rijden en win 5 kusjes!" },
   { img: "IMG_2402.jpeg", text: "Of nooit meer sinaasappels of nooit meer eitjes door mij voor ontbijt, wat zou je dan kiezen? " },
   { img: "IMG_2407.jpeg", text: "'He sir, could you please take a cute picture of us under the star'" },
-  { img: "IMG_2415.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_2418.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_2424.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_2426.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_2464.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_2471.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_2483.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_2502.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_2507.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_2574.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_2609.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_2617.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_2626.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_2656.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_5566.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_5568.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_5573.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_5843.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_6651.jpeg", text: "Ik hou duizend miljoen miljard van jou." },
-  { img: "IMG_6671.jpeg", text: "Ik hou duizend miljoen miljard van jou." }
+  { img: "IMG_2415.jpeg", text: "Ik weet nou niet wat schattiger is, jij of die miauwerds. PRIJSVRAAG: welke bijnamen gaf jij ze? (1 kusje per juist antwoord)" },
+  { img: "IMG_2418.jpeg", text: "Du sind so schöne damen, ich liebe dich gans viel und ich möchte weihnacht jeden jahr vhieren mit du :)" },
+  { img: "IMG_2424.jpeg", text: "IIEEELLLLLLL JULLIE LIKKEN ELKAAR GADVERDAMME (ʘᗩʘ')" },
+  { img: "IMG_2426.jpeg", text: "Je ziet de oprechte lol die jullie hebben zo goed op deze foto, jullie zijn zo geweldig samen" },
+  { img: "IMG_2464.jpeg", text: "Zo cute, maar jullie winnen het nooit van mij en omi ヾ(⌐■_■)ノ♪" },
+  { img: "IMG_2471.jpeg", text: "Sorry, kon het niet laten ¯\_(ツ)_/¯" },
+  { img: "IMG_2483.jpeg", text: "Drie generaties power vrouwen en een blauwe hemel, wat een plaatje" },
+  { img: "IMG_2502.jpeg", text: "Gekkie! Dat ene oog van je is een beetje de weg kwijt :P" },
+  { img: "IMG_2507.jpeg", text: "GLUHWEINTOURRRR, ook al woon je niet meer in Scheveningen volgend jaar, ga dit samen met Lot gewoon door he, misschien alleen zonder de hardcore dit jaar (ᵔᴥᵔ)" },
+  { img: "IMG_2574.jpeg", text: "Wat een multitalent ben je ook he, gewoon even op je hoofd staan op het strand! (en dan ook nog een zo gei.... ehm mooi ( ͡° ͜ʖ ͡°)" },
+  { img: "IMG_2609.jpeg", text: "CHALLENGE! Bedenk welke berichtje/notificatie er op mijn telefoon kwam om deze gezichten van ons te krijgen. Ik begin: 'Trein naar Leuven rijdt de hele avond niet'" },
+  { img: "IMG_2617.jpeg", text: "Wat een lekkere vriend heb je ook he ᕙ(⇀‸↼‶)ᕗ" },
+  { img: "IMG_2626.jpeg", text: "Holy shit, wat is het daar mooi he. Mag uik volgend jaar weer mee ʕ•ᴥ•ʔ ?" },
+  { img: "IMG_2656.jpeg", text: "Eten maken we altijd zelf, we zijn niet lui. Die sushi ziet er lekker uit, maar de echte snack zit in de groene trui (｡◕‿◕｡)" },
+  { img: "IMG_5566.jpeg", text: "'He, ga je even mee naar de wc?'" },
+  { img: "IMG_5568.jpeg", text: "TOBI ALERT: app Tobi nu en zeg hoe erg we hem missen en dat hij deze zomer gewoon naar Europa komt." },
+  { img: "IMG_5573.jpeg", text: "'De bende van ellende, klaar om de nacht te veroveren': Berlijn, 2025" },
+  { img: "IMG_5843.jpeg", text: "Jij, dakterras, wijntje, pizza, goeie gesprekken en het allemaal nog een beetje spannend vinden, take me back" },
+  { img: "IMG_6651.jpeg", text: "Noem een betere groep mensen om een weekend te beleven die je nooit meer vergeet, ik wacht" },
+  { img: "IMG_6671.jpeg", text: "De drie meest tevreden jongens allertijden" }
 ];
 
 
@@ -178,6 +178,7 @@
   </script>
 </body>
 </html>
+
 
 
 
