Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   { img: "IMG_1360.jpeg", text: "Geen uitleg nodig" },
   { img: "IMG_1484.jpeg", text: "Belgische politie: 'NU DIE FIETS AF, LEVENSGEVAARLIJK!'" },
   { img: "IMG_1490.jpeg", text: "Belgische politie: 'NU DIE FIETS AF, LEVENSGEVAARLIJK!" },
-  { img: "IMG_1504.jpeg", text: "Lara: '" },
+  { img: "IMG_1504.jpeg", text: "Lara: 'Protein is really not imporant, you shouldn't eat to much of it'" },
   { img: "IMG_1511.jpeg", text: "Cutiepetoeties, van de zomer weer veel feestjes met Lara pakken!" },
   { img: "IMG_1560.jpeg", text: "Blauw, rood, bruin, blond, het bier was lauw en de avond bond" },
   { img: "IMG_1695.jpeg", text: "Wat is nog leuker dan een avond Skatecafe? Een avond skatecafe met Elin natuurlijk :)" },
@@ -178,6 +178,7 @@
   </script>
 </body>
 </html>
+
 
 
 
