Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     const items = [
   { img: "ski_kusje.jpeg", text: "Mogen we niet even terug naar Italië" },
   { img: "zielige_mikki.jpeg", text: "Soms ben je ook een beetje zielig" },
-  { img: "0DC615C9-47BA-4E60-B891-0930CD9B3C2A.jpeg", text: "Foto van dat weekend Berlijn waar het allemaal een beetje begon... :) " },
+  { img: "0DC615C9-47BA-4E60-B891-0930CD9B3C2A.jpeg", text: "Volgensmij is dit een foto uit Hamburg, waar het allemaal een beetje begon... :) " },
   { img: "72BFD564-AF81-45C7-BF4D-7382B3C95C38.jpeg", text: "Ich möchte bitte gerne nog ein Weizen" },
   { img: "2907ACEA-3281-419F-9740-90993014B7EA.jpeg", text: "Ditte vette raveparty op de A10, dat was echt een once in a lifetime #ikwilweerzobruinzijn" },
   { img: "AC90B10F-214D-4573-BD62-7BA425A2B771.jpeg", text: "Klein kusje, groot bord Tiroler Gröstl" },
@@ -178,6 +178,7 @@
   </script>
 </body>
 </html>
+
 
 
 
